Fix syntax errors in url function calls
Remove indentation on lines where the URL spills past 100 characters

--- a/CSS/dsp-custom.less
+++ b/CSS/dsp-custom.less
@@ -83,13 +83,14 @@ header.main-header {
 			left top repeat, rgba(42,48,51,1.00);
 	color: #fff !important;
 	@media print {
-		background: url(/wp-content/uploads/sites/50/2015/04/seamless-marble-texture_528x528.png) left top repeat,
+		background: url(/wp-content/uploads/sites/50/2015/04/seamless-marble-texture_528x528.png) 
+			left top repeat,
 		  rgba(42,48,51,1.00);
 	}
 	@media all and (max-width: 1208px) {
 		background: 
 			url(/wp-content/uploads/sites/50/2015/06/Distinguished-Scholarships-Logo-sm-WP_
-				50px-height-2.png) no-repeat right top,
+50px-height-2.png) no-repeat right top,
 			url(/wp-content/uploads/sites/50/2015/04/seamless-marble-texture_528x528.png) 
 				left top repeat, rgba(42,48,51,1.00);
 	}
@@ -128,7 +129,7 @@ scholarships_portrait.jpg) center center/auto 100%;
 					@media (max-width: @large-mobile-screen-width) {
 						padding-bottom: 38%;
 						background: url(/wp-content/uploads/sites/50/2017/03/decoration_
-							international-scholarships_landscape.jpg) top center/100% auto;
+international-scholarships_landscape.jpg) top center/100% auto;
 					}
 				}
 			}
@@ -140,7 +141,7 @@ scholarships_portrait.jpg) center center/100% auto no-repeat;
 					@media (max-width: @large-mobile-screen-width) {
 						padding-bottom: 38%;
 						background: url(/wp-content/uploads/sites/50/2017/03/decoration_daca-
-							scholarships_landscape.jpg) top center/100% auto no-repeat;
+scholarships_landscape.jpg) top center/100% auto no-repeat;
 					}
 				}
 			}
@@ -415,8 +416,8 @@ scholarships_portrait.jpg) center center/100% auto no-repeat;
 				color: @hex-white;
 				.transition("color .4s linear, border .4s ease-in, box-shadow .4s ease-in");
 				&:hover {
-					text-shadow: 0.0625em 0.0625em 0.0625em rgba(red(@hex-white), green(@hex-white),
- blue(@hex-white), .3);
+					text-shadow: 0.0625em 0.0625em 0.0625em rgba(red(@hex-white), 
+						green(@hex-white), blue(@hex-white), .3);
 				}
 			}
 			&.gray {
@@ -941,14 +942,14 @@ ol.massie-project {
 **/
 
 .use-tool-tip-indicator-icon(url(/wp-content/uploads/sites/50/2016/10/icon_indicator_tool-tip-info_
-	16x16.png));
+16x16.png));
 .use-sectional-article-headers();
 .use-glass-button-layout();
 .use-award-recipients-tables();
 .use-linked-columns();
 .use-events-calendar("Distinguished Scholarships Program");
 .use-on-this-page-sections(url(/wp-content/uploads/sites/50/2017/10/micon_returnKey_rotated-90-deg-
-	cw_54x64.png));
+cw_54x64.png));
 
 /*!    ··························································································
 ***    DSP CUSTOM §13.1: Overrides for mixin-included styles
@@ -965,7 +966,7 @@ ol.massie-project {
 	header.main-header {
 		background: 
 			url(/wp-content/uploads/sites/50/2017/10/Distinguished-Scholarships-Logo-sm-WP_for-
-				short-main-headers-2.png) no-repeat right center,
+short-main-headers-2.png) no-repeat right center,
 			url(/wp-content/uploads/sites/50/2015/04/seamless-marble-texture_528x528.png) 
 				left top repeat, rgba(42,48,51,1.00);
 		.sub-header-default,
